# founder-flow

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: spec.md
examples/: README.md  sample-brief.html  sample-brief.json  sample-competitor-analysis.json  sample-customer-discovery.json  sample-directive.json  sample-idea-validation.json  sample-synthesis.json
founderflow/: __init__.py  cli.py  config.py  events.py  models.py  pipeline.py  rendering.py  state.py  store.py
founderflow/agents/: protocol.py  runner.py
founderflow/agents/prompts/: competitor_analyst.md  customer_discovery.md  evidence_integrator.md  idea_validator.md
founderflow/agents/prompts/sections/: grounding_rules.md  output_format.md  prior_work.md
founderflow/gates/: validation.py
founderflow/runners/: claude.py  usage.py
founderflow/templates/: brief.html.j2
founderflow/tests/: conftest.py  test_gates.py  test_models.py  test_pipeline.py  test_rendering.py  test_store.py
