[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "founderflow"
version = "0.1.0"
description = "Multi-agent startup idea validation system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
    "filelock>=3.12",
    "typer[all]>=0.12",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.scripts]
founderflow = "founderflow.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["founderflow/tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff",
]
